--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
         <p> Falta de apetite. <p/>
         <p> Manchas vermelhas no corpo. <p/>
 
-            
+            <p> <video controls>
+                    <source id="videotec" src="Dengue_ quais os sintomas, quando é hora de ir ao PS e quem pode se vacinar no SUS_ (1).mp4" type="video/mp4"></source>
+                </video></p>
         
 
 
